hphp/hack/test/typecheck/reactive/owned_mutable8.php
<?hh
<<file: __EnableUnstableFeatures('coeffects_provisional')>>

class A {
  // ERROR
  public function f(<<__OwnedMutable>> A $a): void {
  }
}
